<?xml version="1.0" encoding="utf-8"?>
<!-- The layout for the MapFragment, displaying the Mapbox map. -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mapFragmentConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".MapFragment">

    <!-- Text to show the user how much time remains on their current combo. -->
    <TextView
        android:id="@+id/comboTimerText"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/combo_background"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/no_active_combo_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Text to show the user how much their current combo bonus is. -->
    <TextView
        android:id="@+id/comboFactorText"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/combo_background"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/no_active_combo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comboTimerText" />

    <!-- The MapboxSDK MapView which displays the map to the user. -->
    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        mapbox:mapbox_cameraTargetLat="55.94444"
        mapbox:mapbox_cameraTargetLng="-3.18888"
        mapbox:mapbox_cameraZoom="16"
        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10">
    </com.mapbox.mapboxsdk.maps.MapView>

    <!-- The FAB which lets the user enter coin pick up mode. -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_pickup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        mapbox:srcCompat="@mipmap/fab_pickup" />

    <!-- The fab which enters coin inspection mode. -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_inspect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        mapbox:srcCompat="@mipmap/fab_inspect" />

    <!-- A layout to display snackbars in to make sure they appear above the bottom nav bar
         of the MainActivity this fragment will be attached to. -->
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/snackbarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>